# QuantTrader

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: publishing_guide.md  trading_system_core_requirements.md  trading_system_roadmap.md
examples/: macd_strategy.py  run_macd_backtest_incremental.py  run_macd_strategy.py  tmp_check_spot_ohlcv.py
examples/macd_strategy/: run_backtest_events.py  run_backtest_futures.py
quanttrader/: __init__.py  _version.py
quanttrader/accounts/: base.py  futures.py  simulated.py
quanttrader/data/: __init__.py  base.py  cache.py  circuit_breaker.py
quanttrader/data/adapters/: __init__.py  base.py  binance.py  ccxt_adapter.py
quanttrader/engine/: backtest.py  base.py
quanttrader/indicators/: __init__.py  incremental.py  resampler.py  talipp_adapter.py
quanttrader/reports/: base.py
quanttrader/risk/: base.py
quanttrader/strategies/: __init__.py  base.py
quanttrader/traders/: base.py  events.py  futures.py
tests/: test_data_center.py  test_macd_strategy.py
